[gd_scene load_steps=6 format=3 uid="uid://cjoe6yrdhaj2k"]

[ext_resource type="Texture2D" uid="uid://upmcqv0i3tpp" path="res://images/sky.png" id="1_iag8v"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_ptw04"]
[ext_resource type="Texture2D" uid="uid://dytryt6od1hgl" path="res://images/ui/ui_layout.png" id="3_ujrmm"]
[ext_resource type="FontFile" uid="uid://4fm13rlrv0pl" path="res://images/kronika.ttf" id="4_efxvl"]
[ext_resource type="Texture2D" uid="uid://qsq3j3x401p5" path="res://images/redball.png" id="4_o1pps"]

[node name="main" type="Node"]
script = ExtResource("1_ptw04")

[node name="level" type="Node2D" parent="."]
unique_name_in_owner = true
texture_filter = 1

[node name="ui" type="Camera2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)
zoom = Vector2(2, 2)

[node name="bg" type="Sprite2D" parent="ui"]
z_index = -100
position = Vector2(-0.000324249, -2.28882e-05)
scale = Vector2(1.61917, 1.59734)
texture = ExtResource("1_iag8v")

[node name="layout" type="Sprite2D" parent="ui"]
texture_filter = 1
position = Vector2(0, 3.05176e-05)
scale = Vector2(8, 8.05926)
texture = ExtResource("3_ujrmm")

[node name="rbref" type="Sprite2D" parent="ui"]
self_modulate = Color(1, 1, 1, 0.4)
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("4_o1pps")

[node name="menus" type="Node2D" parent="ui"]

[node name="obj_edit" type="Control" parent="ui/menus"]
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = -448.0
offset_right = 960.0
offset_bottom = 320.0

[node name="container" type="ScrollContainer" parent="ui/menus/obj_edit"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 768.0
vertical_scroll_mode = 2

[node name="editlist" type="VBoxContainer" parent="ui/menus/obj_edit/container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 96

[node name="scrollfix" type="Control" parent="ui/menus/obj_edit/container/editlist"]
layout_mode = 2

[node name="apply_edits" type="Button" parent="ui/menus/obj_edit"]
layout_mode = 0
offset_top = 768.0
offset_right = 192.0
offset_bottom = 896.0
theme_override_fonts/font = ExtResource("4_efxvl")
theme_override_font_sizes/font_size = 50
text = "apply"
flat = true

[node name="delete_block" type="Button" parent="ui/menus/obj_edit"]
layout_mode = 0
offset_left = 192.0
offset_top = 768.0
offset_right = 384.0
offset_bottom = 896.0
theme_override_fonts/font = ExtResource("4_efxvl")
theme_override_font_sizes/font_size = 50
text = "delete"
flat = true

[node name="obj_list" type="Control" parent="ui/menus"]
layout_mode = 3
anchors_preset = 0
offset_left = -960.0
offset_top = -448.0
offset_right = -576.0
offset_bottom = 320.0

[node name="container" type="ScrollContainer" parent="ui/menus/obj_list"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 768.0
vertical_scroll_mode = 2

[node name="blocklist" type="VBoxContainer" parent="ui/menus/obj_list/container"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 64

[node name="scrollfix" type="Control" parent="ui/menus/obj_list/container/blocklist"]
layout_mode = 2

[node name="new_polygon" type="Button" parent="ui/menus/obj_list"]
layout_mode = 0
offset_top = 768.0
offset_right = 96.0
offset_bottom = 896.0
theme_override_fonts/font = ExtResource("4_efxvl")
theme_override_font_sizes/font_size = 60
text = "+"
flat = true

[node name="new_circle" type="Button" parent="ui/menus/obj_list"]
layout_mode = 0
offset_left = 96.0
offset_top = 768.0
offset_right = 192.0
offset_bottom = 896.0
theme_override_fonts/font = ExtResource("4_efxvl")
theme_override_font_sizes/font_size = 60
text = "+"
flat = true

[node name="new_checkpoint" type="Button" parent="ui/menus/obj_list"]
layout_mode = 0
offset_left = 192.0
offset_top = 768.0
offset_right = 288.0
offset_bottom = 896.0
theme_override_fonts/font = ExtResource("4_efxvl")
theme_override_font_sizes/font_size = 60
text = "+"
flat = true

[node name="new_flag" type="Button" parent="ui/menus/obj_list"]
layout_mode = 0
offset_left = 288.0
offset_top = 768.0
offset_right = 384.0
offset_bottom = 896.0
theme_override_fonts/font = ExtResource("4_efxvl")
theme_override_font_sizes/font_size = 60
text = "+"
flat = true

[node name="row_options" type="Control" parent="ui/menus"]
layout_mode = 3
anchors_preset = 0
offset_left = -960.0
offset_top = -544.0
offset_right = 960.0
offset_bottom = -448.0

[node name="export_level" type="Button" parent="ui/menus/row_options"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("4_efxvl")
theme_override_font_sizes/font_size = 40
text = "export"
flat = true

[node name="export_save" type="Button" parent="ui/menus/row_options"]
layout_mode = 0
offset_left = 192.0
offset_right = 384.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("4_efxvl")
theme_override_font_sizes/font_size = 40
text = "save"
flat = true

[node name="import_save" type="Button" parent="ui/menus/row_options"]
layout_mode = 0
offset_left = 384.0
offset_right = 576.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("4_efxvl")
theme_override_font_sizes/font_size = 40
text = "load"
flat = true

[node name="exit_app" type="Button" parent="ui/menus/row_options"]
layout_mode = 0
offset_left = 1728.0
offset_right = 1920.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("4_efxvl")
theme_override_font_sizes/font_size = 40
text = "exit"
flat = true

[node name="row_info" type="Control" parent="ui/menus"]
layout_mode = 3
anchors_preset = 0
offset_left = -960.0
offset_top = 448.0
offset_right = 960.0
offset_bottom = 544.0

[node name="position" type="Label" parent="ui/menus/row_info"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("4_efxvl")
theme_override_font_sizes/font_size = 40
text = "( 0 , 0 )"
horizontal_alignment = 1
vertical_alignment = 1

[node name="files" type="Node" parent="."]
unique_name_in_owner = true

[node name="export" type="FileDialog" parent="files"]
mode = 2
title = "export level"
initial_position = 1
size = Vector2i(800, 600)
content_scale_aspect = 4
ok_button_text = "Save"
dialog_hide_on_ok = true
mode_overrides_title = false
access = 2

[node name="save" type="FileDialog" parent="files"]
mode = 2
title = "save level"
initial_position = 1
size = Vector2i(800, 600)
content_scale_aspect = 4
ok_button_text = "Save"
dialog_hide_on_ok = true
mode_overrides_title = false
access = 2

[node name="load" type="FileDialog" parent="files"]
mode = 2
title = "load level"
initial_position = 1
size = Vector2i(800, 600)
content_scale_aspect = 4
ok_button_text = "Open"
dialog_hide_on_ok = true
mode_overrides_title = false
file_mode = 0
access = 2

[connection signal="button_down" from="ui/menus/obj_edit/apply_edits" to="." method="apply_edits"]
[connection signal="button_down" from="ui/menus/obj_edit/delete_block" to="." method="delete_block"]
[connection signal="button_down" from="ui/menus/obj_list/new_polygon" to="." method="new_block" binds= [0]]
[connection signal="button_down" from="ui/menus/obj_list/new_circle" to="." method="new_block" binds= [1]]
[connection signal="button_down" from="ui/menus/obj_list/new_checkpoint" to="." method="new_block" binds= [2]]
[connection signal="button_down" from="ui/menus/obj_list/new_flag" to="." method="new_block" binds= [3]]
[connection signal="button_down" from="ui/menus/row_options/export_level" to="files/export" method="set_visible" binds= [true]]
[connection signal="button_down" from="ui/menus/row_options/export_save" to="files/save" method="set_visible" binds= [true]]
[connection signal="button_down" from="ui/menus/row_options/import_save" to="files/load" method="set_visible" binds= [true]]
[connection signal="button_down" from="ui/menus/row_options/exit_app" to="." method="exit_app"]
[connection signal="file_selected" from="files/export" to="." method="export_level"]
[connection signal="file_selected" from="files/save" to="." method="export_save"]
[connection signal="file_selected" from="files/load" to="." method="import_save"]
